tests/invalid/missing_semicolon.ar
fn get(n: usize) {
    const i = n
}

//! tests/invalid/missing_semicolon.ar:3:1: error: expected `;`, got `}`
